--- a/SPA/src/css/app.css
+++ b/SPA/src/css/app.css
@@ -144,6 +144,10 @@
     margin:20px 0;
 }
 
+#app .v-dialog__content.v-dialog__content--active {
+  z-index:1000 !important;
+}
+
 .v-dialog .v-card .headline {white-space: nowrap;}
 
 #app .v-card__actions {display: inherit;text-align: center;}
@@ -152,3 +156,57 @@
 #app .v-snack a, #app .v-snack span {
   color: #fff !important;
 }
+
+.radio-group-full-width >>>.v-input__control {
+  width: 100%
+}
+#map {
+     min-height: 300px;
+   }
+
+   /* modal */
+   .modal-mask {
+    position: fixed;
+    z-index: 9998;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: table;
+    transition: opacity 0.3s ease;
+  }
+  
+  .modal-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+  }
+  
+  .modal-container {
+    width: 300px;
+    margin: 0px auto;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+    transition: all 0.3s ease;
+    min-height:200px;
+  }
+  
+  
+  .modal-header h3 {
+    background-color:#007155;
+    padding:10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: #fff;
+  }
+
+  .modal-body {
+    padding:10px;
+  }
+  #app .modal-body .subtitle-1 {
+    margin-top:0;
+  }
+  #app .modal-container .theme--light.v-divider  {
+      margin:5px 0;
+  }
